src/objects/HWS_Product_Version_Item__c.object
<CustomObject>
    <description>Staging table to store serviceable part revisions</description>
    <fields>
        <fullName>HWS_Description__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_EDPActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDPLastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_LifeCycleStatus__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Cycle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNCode</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HWS_NSNSourceSystem__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Revision__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SparePart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spare Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Type__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Unit_of_Measure__c</fullName>
        <description>Created for HWS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Version Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Version Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>